--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>Triangle</title>
+    <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-
+<div class="header">
+    <h1>Triangle</h1>
+</div>
+<div class="content">
+    <div class="food">
+        黑椒牛肉饭
+    </div>
+    <button>order</button>
+</div>
+<div class="footer">
+    @footer
+</div>
 </body>
 </html>
