--- a/index.html
+++ b/index.html
@@ -6,17 +6,28 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<div class="header">
-    <h1>Triangle</h1>
-</div>
-<div class="content">
-    <div class="food">
-        黑椒牛肉饭
+<div class="wrapper">
+    <div class="header">
+        <h1>TRIANGLE</h1>
+
+        <p>Triangle订餐程序</p>
     </div>
-    <button>order</button>
-</div>
-<div class="footer">
-    @footer
+    <div class="content">
+        <div class="filter"><span>选择: <a href="/">米饭</a>|<a href="/">面食</a>|<a href="/">小吃</a>|<a href="/">其他</a></span>
+        </div>
+        <div class="food-list">
+            <ul>
+                <li>黑椒牛肉饭</li>
+                <li>黑椒牛肉饭</li>
+                <li>黑椒牛肉饭</li>
+                <li>黑椒牛肉饭</li>
+                <li>黑椒牛肉饭</li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer">
+        @footer
+    </div>
 </div>
 </body>
 </html>
