update header part

--- a/index.html
+++ b/index.html
@@ -6,28 +6,33 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
-<div class="wrapper">
-    <div class="header">
-        <h1>TRIANGLE</h1>
+<div class="header">
+    <div class="nav">
+        <h1 class="logo fl"><a href="./index.html"><img src="./img/logo.png" alt="Triangle"/></a></h1>
 
-        <p>Triangle订餐程序</p>
-    </div>
-    <div class="content">
-        <div class="filter"><span>选择: <a href="/">米饭</a>|<a href="/">面食</a>|<a href="/">小吃</a>|<a href="/">其他</a></span>
-        </div>
-        <div class="food-list">
-            <ul>
-                <li>黑椒牛肉饭</li>
-                <li>黑椒牛肉饭</li>
-                <li>黑椒牛肉饭</li>
-                <li>黑椒牛肉饭</li>
-                <li>黑椒牛肉饭</li>
-            </ul>
+        <div class="search-box fl">
+            <input class="header-search fl" type="text" value="山寨自美团外卖">
+            <a class="doSearch fl" href="javascript:">搜索</a>
+
         </div>
     </div>
-    <div class="footer">
-        @footer
+</div>
+<div class="content">
+    <div class="filter"><span>选择: <a href="javascript:alert('米饭');">米饭</a>|<a href="">面食</a>|<a href="">小吃</a>|<a
+            href="">其他</a></span>
     </div>
+    <div class="food-list">
+        <ul>
+            <li>黑椒牛肉饭</li>
+            <li>黑椒牛肉饭</li>
+            <li>黑椒牛肉饭</li>
+            <li>黑椒牛肉饭</li>
+            <li>黑椒牛肉饭</li>
+        </ul>
+    </div>
+</div>
+<div class="footer">
+    @footer
 </div>
 </body>
 </html>
