--- a/index.html
+++ b/index.html
@@ -18,21 +18,75 @@
     </div>
 </div>
 <div class="content">
-    <div class="filter"><span>选择: <a href="javascript:alert('米饭');">米饭</a>|<a href="">面食</a>|<a href="">小吃</a>|<a
-            href="">其他</a></span>
+    <div class="filter">
+        <span>选择: <a href="javascript:">米饭</a>|<a href="javascript:">面食</a>|<a href="javascript:">小吃</a>|<a
+                href="javascript:">其他</a></span>
     </div>
-    <div class="food-list">
-        <ul>
-            <li>黑椒牛肉饭</li>
-            <li>黑椒牛肉饭</li>
-            <li>黑椒牛肉饭</li>
-            <li>黑椒牛肉饭</li>
-            <li>黑椒牛肉饭</li>
-        </ul>
+    <div class="foodList">
+        <div class="food" id="item1">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item2">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item3">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item4">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item5">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item6">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item7">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item8">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item9">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item10">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+        <div class="food" id="item11">
+            <div class="description fl">黑椒牛肉饭</div>
+            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="price fr">￥0.1/份</div>
+        </div>
+    </div>
+    <div class="submit">
+        <div class="userName">姓名:<input type="text" value=""/></div>
+        <div class="totalPrice">总价格: ￥<span id="totalPrice">0.1</span></div>
+        <div class="confirm"><a class="button" href="javascript:alert('ok~')">确认提交</a></div>
     </div>
 </div>
 <div class="footer">
-    @footer
+    &copy2015 Triangle
 </div>
 </body>
 </html>
