--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="food">
 <head lang="en">
     <meta charset="UTF-8">
     <title>Triangle</title>
     <link rel="stylesheet" href="css/style.css"/>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="js/foodOrder.js"></script>
 </head>
-<body>
+<body ng-controller="OrderController">
 <div class="header">
     <div class="nav">
-        <h1 class="logo fl"><a href="./index.html"><img src="./img/logo.png" alt="Triangle"/></a></h1>
+        <div class="logo fl"><a href="./index.html"><img src="./img/logo.png" alt="Triangle"/></a></div>
 
         <div class="search-box fl">
             <input class="header-search fl" type="text" value="山寨自美团外卖">
@@ -24,66 +26,50 @@
     </div>
     <div class="foodList">
         <div class="food" id="item1">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="pic fl"><img src="img/大排饭.jpg"/></div>
+            <div class="description fl">大排饭</div>
+            <div class="choose fr"><input type="checkbox" ng-model="item1"/></div>
             <div class="price fr">￥0.1/份</div>
         </div>
         <div class="food" id="item2">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="pic fl"><img src="img/鸡排饭.jpg" alt=""/></div>
+            <div class="description fl">鸡排饭</div>
+            <div class="choose fr"><input type="checkbox" ng-model="item2"/></div>
             <div class="price fr">￥0.1/份</div>
         </div>
         <div class="food" id="item3">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="pic fl"><img src="img/卤肉饭.jpg" alt=""/></div>
+            <div class="description fl">卤肉饭</div>
+            <div class="choose fr"><input type="checkbox" ng-model="item3"/></div>
             <div class="price fr">￥0.1/份</div>
         </div>
         <div class="food" id="item4">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="pic fl"><img src="img/排骨砂锅.jpg" alt=""/></div>
+            <div class="description fl">排骨砂锅</div>
+            <div class="choose fr"><input type="checkbox" ng-model="item4"/></div>
             <div class="price fr">￥0.1/份</div>
         </div>
         <div class="food" id="item5">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="pic fl"><img src="img/鳕鱼饭.jpg" alt=""/></div>
+            <div class="description fl">鳕鱼饭</div>
+            <div class="choose fr"><input type="checkbox" ng-model="item5"/></div>
             <div class="price fr">￥0.1/份</div>
         </div>
         <div class="food" id="item6">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item7">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item8">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item9">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item10">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item11">
-            <div class="description fl">黑椒牛肉饭</div>
-            <div class="choose fr"><input type="checkbox"/></div>
+            <div class="pic fl"><img src="img/仔鸡饭.jpg" alt=""/></div>
+            <div class="description fl">仔鸡饭</div>
+            <div class="choose fr"><input type="checkbox" ng-model="item6"/></div>
             <div class="price fr">￥0.1/份</div>
         </div>
     </div>
     <div class="submit">
         <div class="userName">姓名:<input type="text" value=""/></div>
         <div class="totalPrice">总价格: ￥<span id="totalPrice">0.1</span></div>
-        <div class="confirm"><a class="button" href="javascript:alert('ok~')">确认提交</a></div>
+        <div class="confirm"><a class="button" href="" ng-click="submitFood()">确认提交</a></div>
     </div>
+    <ul>
+        <li ng-repeat="item in items">{{item.name}}</li>
+    </ul>
 </div>
 <div class="footer">
     &copy2015 Triangle
