--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <title>Triangle</title>
     <link rel="stylesheet" href="css/style.css"/>
     <script src="bower_components/angular/angular.min.js"></script>
-    <script src="js/foodOrder.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="js/app.js"></script>
 </head>
-<body ng-controller="OrderController">
+<body>
 <div class="header">
     <div class="nav">
         <div class="logo fl"><a href="./index.html"><img src="./img/logo.png" alt="Triangle"/></a></div>
@@ -19,58 +20,10 @@
         </div>
     </div>
 </div>
-<div class="content">
-    <div class="filter">
-        <span>选择: <a href="javascript:">米饭</a>|<a href="javascript:">面食</a>|<a href="javascript:">小吃</a>|<a
-                href="javascript:">其他</a></span>
-    </div>
-    <div class="foodList">
-        <div class="food" id="item1">
-            <div class="pic fl"><img src="img/大排饭.jpg"/></div>
-            <div class="description fl">大排饭</div>
-            <div class="choose fr"><input type="checkbox" ng-model="item1"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item2">
-            <div class="pic fl"><img src="img/鸡排饭.jpg" alt=""/></div>
-            <div class="description fl">鸡排饭</div>
-            <div class="choose fr"><input type="checkbox" ng-model="item2"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item3">
-            <div class="pic fl"><img src="img/卤肉饭.jpg" alt=""/></div>
-            <div class="description fl">卤肉饭</div>
-            <div class="choose fr"><input type="checkbox" ng-model="item3"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item4">
-            <div class="pic fl"><img src="img/排骨砂锅.jpg" alt=""/></div>
-            <div class="description fl">排骨砂锅</div>
-            <div class="choose fr"><input type="checkbox" ng-model="item4"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item5">
-            <div class="pic fl"><img src="img/鳕鱼饭.jpg" alt=""/></div>
-            <div class="description fl">鳕鱼饭</div>
-            <div class="choose fr"><input type="checkbox" ng-model="item5"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-        <div class="food" id="item6">
-            <div class="pic fl"><img src="img/仔鸡饭.jpg" alt=""/></div>
-            <div class="description fl">仔鸡饭</div>
-            <div class="choose fr"><input type="checkbox" ng-model="item6"/></div>
-            <div class="price fr">￥0.1/份</div>
-        </div>
-    </div>
-    <div class="submit">
-        <div class="userName">姓名:<input type="text" value=""/></div>
-        <div class="totalPrice">总价格: ￥<span id="totalPrice">0.1</span></div>
-        <div class="confirm"><a class="button" href="" ng-click="submitFood()">确认提交</a></div>
-    </div>
-    <ul>
-        <li ng-repeat="item in items">{{item.name}}</li>
-    </ul>
+
+<div class="content" ng-view>
 </div>
+
 <div class="footer">
     &copy2015 Triangle
 </div>
