--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="header">
     <div class="nav">
-        <div class="logo fl"><a href="./index.html"><img src="./img/logo.png" alt="Triangle"/></a></div>
+        <div class="logo fl"><a ng-href="#/"><img src="./img/logo.png" alt="Triangle"/></a></div>
 
         <div class="search-box fl">
             <input class="header-search fl" type="text" value="山寨自美团外卖">
@@ -25,7 +25,7 @@
 </div>
 
 <div class="footer">
-    &copy2015 Triangle
+    &copy2015 Triangle {{1+2}}
 </div>
 </body>
 </html>
