--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Triangle</title>
     <link rel="stylesheet" href="css/style.css"/>
-    <script src="http://cdn.staticfile.org/angular.js/1.3.0-beta.13/angular.min.js"></script>
-    <script src="http://cdn.staticfile.org/angular.js/1.3.0-beta.13/angular-route.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.9/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.9/angular-route.min.js"></script>
     <script src="js/app.js"></script>
 </head>
 <body>
